# k3s-practice

./: .gitignore  .gitmodules  README.md
backend/: pyproject.toml  test.py
backend/api_server/: Dockerfile  main.py  start_server.sh
backend/api_server/mq_task/: __init__.py  mq_task.py  requirements.txt
backend/api_server/mq_task/rec_digit/: img_preprocess.py  ocr_model.py
backend/cluster_def/: api_server.yaml  celery_task.yaml  flower.yaml
backend/mq_task/: celery.Dockerfile  entrypoint.sh  flower.Dockerfile  mq_task.py
backend/mq_task/rec_digit/: Model_gpu_C16_f30_20_10  __init__.py  ocr_model.py  preprocess.py
cluster_install/: install.sh  rabbitmq.yaml
cluster_install/ingress/: ingress.yaml  install_cert_manager.sh  key_gen.sh
mongo/: Dockerfile  mongo-express.yaml
private_registry/: docker-registry.yaml
